<package>
  <name>hand_tracking_ros_package</name>
  <version>0.1.2</version>
  <description>

     Hand tracking to publish thumb angle

  </description>
  <author>Nathan</author>
  <maintainer email="dennler@usc.edu">Nathan Dennler</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/cordial_face</url>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>